--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,16 @@
     </td>
   </tr>
 </table>
-<div id="container" >
+<div id="container">
+
+
 <div id="user_nav">
         <% if logged_in? %>
          <%= link_to ( t "global.dashboard"), root_url %> |
         <% if permitted_to? :show, Supplier.new %>
          <%= link_to ( t "user.t_title"), users_path %> |
          <%= link_to ( t "supplier.t_title"), suppliers_path %> |
+         <%= link_to ( t "parts.t_title"), parts_path %> |
             <% end %>
          <%= t "global.welcome" %> <% if permitted_to? :edit_profile, User.new %>
         <%= link_to current_user.username, profile_url(:id => current_user)%>! Not you?
@@ -34,13 +37,19 @@
     <% end %>
 
 </div>
-  <p>
+
+  <!--<div id="right_bar">
+  </div>-->
+    <div id="yield">
+      <p>
     <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <%- end -%>
   </p>
      <%= yield %>
-</div>
+    </div>  
+
+  </div>
 <div id="footer"  >
 <p > MyIT CRM Version 2.0.0</p>
 </div>
