--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,17 @@
 <h1>New products</h1>
 
-<% form_for(@products) do |f| %>
-  <%= f.error_messages %>
+<% semantic_form_for @product do |f| %>
+    <% f.inputs do %>
+        <%= f.input :supplier, :label_method => :company_name  %>
+        <%= f.input :description, :hint => (t "products.hint_desc") %>
+        <%= f.input :model %>
+        <%= f.input :manufacturer %>
+        <%= f.input :cost_price %>
+        <%= f.input :sell_price %>
 
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+    <% end %>
+
+  <%= f.buttons %>
 <% end %>
 
 <%= link_to 'Back', products_path %>
