--- a/public/stylesheets/formtastic.css
+++ b/public/stylesheets/formtastic.css
@@ -53,7 +53,7 @@ form.formtastic fieldset > ol > li:after { content: "."; display: block; height:
 html[xmlns] form.formtastic fieldset > ol > li { display: block; }
 * html form.formtastic fieldset > ol > li { height: 1%; }
 
-form.formtastic fieldset > ol > li.required { color:#cc0000; }
+form.formtastic fieldset > ol > li.required { }
 form.formtastic fieldset > ol > li.optional { }
 form.formtastic fieldset > ol > li.error { }
   
