--- a/public/stylesheets/formtastic_changes.css
+++ b/public/stylesheets/formtastic_changes.css
@@ -16,4 +16,60 @@ form.formtastic fieldset > ol > li p.inline-hints {
     color:#333;
     font-style:italic;
     font-size:8px;
+    font-weight:bolder;
 }
+
+form.formtastic fieldset > ol > li.required {
+    /*font-weight:bolder;*/
+}
+
+/*Fields required and Inline Errors CSS*/
+/*Required fields Label CSS*/
+form.formtastic fieldset > ol > li.required {
+    
+}
+form.formtastic fieldset > ol > li label {
+    display:block;
+    width:25%;
+    float:left;
+    padding-top:.2em;
+    text-align:right;
+    padding-right:1em;
+
+}
+form.formtastic fieldset > ol > li > li label {
+    line-height:100%;
+    padding-top:0;
+}
+form.formtastic fieldset > ol > li > li label input {
+    line-height:100%;
+    vertical-align:middle;
+    margin-top:-0.1em;
+
+}
+
+/*Inline errors*/
+
+form.formtastic fieldset > ol > li p.inline-errors {
+    color: #ff0033;
+    text-transform:capitalize;
+    margin:0.5em 0 0 25%;
+    text-align:left;
+    padding-left:1.5em;
+    font-size:10px;
+    font-style:italic;
+    font-weight:bolder;
+    
+}
+
+form.formtastic fieldset > ol > li.error {
+   /*color:#ff0000;*/
+}
+
+/*Buttons CSS*/
+form.formtastic fieldset.buttons {
+    /*padding-left:25%;*/
+    
+    padding-left:35%;
+}
+
