--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,7 @@
   </tr>
  <tr>
     <td colspan="2" align="right">
-      <strong><%= t "supplier.state" %>:</strong>
+      <strong><%= t "products.cost" %>:</strong>
     </td>
     <td align="left">
      <%=h number_to_currency(@product.cost_price) %>
@@ -47,7 +47,7 @@
   </tr>
   <tr>
     <td colspan="2" align="right">
-      <strong><%= t "supplier.zip" %>:</strong>
+      <strong><%= t "products.sell" %>:</strong>
     </td>
     <td align="left">
      <%=h number_to_currency(@product.sell_price) %>
