--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,17 @@
 <h1><%= [t "parts.t_title"] %></h1>
 <%= link_to(image_tag('add.png',:title => [t "parts.t_add_new_part"]), new_product_path) %><%= link_to [t "parts.t_add_new_part"], new_product_path %>
-<p></p>
+
+  <p>
+  <%= will_paginate @products, :class => "digg_pagination" %>
+</p>
+
 
 <table border="1" cellpadding="0" cellspacing="0" >
   <tr>
-    <th width="200"><%= t "supplier.company_name" %></th>
-    <th width="200"><%= t "products.manufacturer" %></th>
+    <th width="50"><%= t "supplier.our_sku" %></th>
+    <th width="150"><%= t "supplier.supplier" %></th>
+    <th width="50"><%= t "supplier.supplier_sku" %></th>
+    <th width="100"><%= t "products.manufacturer" %></th>
     <th width="200"><%= t "parts.description" %></th>
     <th width="100"><%= t "parts.model" %></th>
     <th width="100"><%= t "parts.cost" %></th>
@@ -17,7 +23,9 @@
 
 <% @products.each do |product| %>
   <tr align="center">
+    <td><%=h product.our_sku %></td>
     <td><%=h product.supplier.company_name %></td>
+    <td><%=h product.supplier_sku %></td>
     <td><%=h product.manufacturer %></td>
     <td><%=h product.description %></td>
     <td><%=h product.model %></td>
