--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,19 +1,50 @@
-<h1>New products</h1>
+<!--myTODO - replace hardcoded text to I18n formats-->
 
+<h1><%= t "products.t_add_new" %></h1><%= link_to(image_tag('add.png',:title => [t "global.edit"]), new_product_category_path) %><%= link_to( [t "product_cat.t_create_new_category"], new_product_category_path) %>
+<table width="100%">
+  <tr>
+    <td colspan="4" align="right">
+        <%= link_to [t "global.back"], products_path %>
+    </td>
+  </tr>
+  </table>
 <% semantic_form_for @product do |f| %>
-    <% f.inputs "Basic" do %>
-        <%= f.input :supplier, :label_method => :company_name  %>
+    <% f.inputs "Basic Information"  do %>
+        <%= f.input :our_sku, :input_html => { :size => 20 } %>
         <%= f.input :description, :hint => (t "products.hint_desc") %>
         <%= f.input :model %>
         <%= f.input :manufacturer %>
+        <%= f.input :product_category %>
+        <%= f.input :supplier, :label_method => :company_name  %>
         <%= f.input :supplier_sku, :input_html => { :size => 20 } %>
-        <%= f.input :our_sku, :input_html => { :size => 20 } %>
         <%= f.input :cost_price, :input_html => { :size => 10 } %>
         <%= f.input :sell_price, :input_html => { :size => 10 } %>
 
+        <%= f.input :created_by, :as => :hidden, :input_html => { :value =>  current_user.username } %>
+        <%= f.input :created_at, :as => :hidden, :input_html => { :value =>  Time.now } %>
     <% end %>
+    <% f.inputs "Inventory"  do %>
+        <%= f.input :stocked_product %>
+        <%= f.input :stocking_qty, :input_html => { :size => 20 } %>
+        <%= f.input :qty_on_hand, :input_html => { :size => 20 } %>
+        <%= f.input :qty_allocated, :input_html => { :size => 20 } %>
+        <%= f.input :qty_available, :input_html => { :size => 20 } %>
+        <%= f.input :qty_ordered, :input_html => { :size => 20 } %>
+    <% end %>
+    <% f.inputs "Selling Information"  do %>
+        <%= f.input :taxable %>
+        <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
+        <%= f.input :discountable %>
+        <%= f.input :disc_amount, :input_html => { :size => 5 } %>
+        <%= f.input :disc_percent, :input_html => { :size => 5 } %>
+    <% end %>
+    <% f.inputs "Warranty Information"  do %>
+        <%= f.input :warranty_info, :as => :text, :input_html => {  :rows => 15 }  %>
+        <%= f.input :warranty_length,  :input_html => { :size => 20 } %>
+        <%= f.input :warranty_unit, :as => :select, :collection => ["Day(s)", "Month(s)", "Year(s)"] %>
+    <% end %>
+
 
   <%= f.buttons %>
 <% end %>
 
-<%= link_to 'Back', products_path %>
