--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,15 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title> <%= t "global.program_name" %> | <%= @title %></title>
+  
   <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base"  %>
+  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'jquery-ui-1.8.2.custom.min.js' %>
+   <script type="text/javascript">
+			$(function(){
+// Tabs
+				$('#tabs').tabs();
+});
+            </script>
 </head>
 <body>
 <table width="100%">
@@ -14,8 +22,6 @@
   </tr>
 </table>
 <div id="container">
-
-
 <div id="user_nav">
         <% if logged_in? %>
          <%= link_to ( t "global.dashboard"), root_url %> |
