--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,13 +2,14 @@
 <table width="100%">
   <tr>
     <td colspan="4" align="right">
-        <%= link_to(image_tag('edit.png',:title => [t "global.edit"]), edit_product_path) %><%= link_to [t "global.edit"], edit_product_path(@product) %> | <%= link_to [t "global.back"], product_path %>
+        <%= link_to [t "global.back"], product_path %>
     </td>
   </tr>
   </table>
-
-      <% semantic_form_for @product do |f| %>
-    <% f.inputs "Basic Information"  do %>
+<% semantic_form_for @product do |f| %>
+<% tabs_for do |tab| %>
+	<% tab.create('tab_one', 'Basic (required)') do %>
+    <% f.inputs  do %>
         <%= f.input :active %>
         <%= f.input :our_sku, :input_html => { :size => 20 } %>
         <%= f.input :description, :hint => (t "products.hint_desc") %>
@@ -21,28 +22,40 @@
         <%= f.input :sell_price, :input_html => { :size => 10 } %>
         <%= f.input :edited_by, :as => :hidden, :input_html => { :value =>  current_user.username } %>
         <%= f.input :edited_at, :as => :hidden, :input_html => { :value =>  Time.now } %>
-    <% end %>
-    <% f.inputs "Inventory"  do %>
-        <%= f.input :stocked_product, :hint => "Enable this if stock needs to be in stock" %>
-        <%= f.input :stocking_qty, :input_html => { :size => 20 } %>
-        <%= f.input :qty_on_hand, :input_html => { :size => 20 } %>
-        <%= f.input :qty_allocated, :input_html => { :size => 20 } %>
-        <%= f.input :qty_available, :input_html => { :size => 20 } %>
-        <%= f.input :qty_ordered, :input_html => { :size => 20 } %>
-    <% end %>
-    <% f.inputs "Selling Information"  do %>
+        <% end %>
+	<% end %>
+	<% tab.create('tab_two', 'Inventory') do %>
+      <% f.inputs do %>
+            <%= f.input :stocked_product, :hint => "Enable this if stock needs to be in stock" %>
+            <%= f.input :stocking_qty, :input_html => { :size => 20 } %>
+            <%= f.input :qty_on_hand, :input_html => { :size => 20 } %>
+            <%= f.input :qty_allocated, :input_html => { :size => 20 } %>
+            <%= f.input :qty_available, :input_html => { :size => 20 } %>
+            <%= f.input :qty_ordered, :input_html => { :size => 20 } %>
+        <% end %>
+   <% end %>
+        <% tab.create('tab_three', 'Selling Information') do %>
+          <% f.inputs  do %>
         <%= f.input :taxable %>
-        <%= f.input :tax_rate, :hint => (t "product.hint_tax_rate") %>
+        <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
         <%= f.input :discountable %>
         <%= f.input :disc_amount, :input_html => { :size => 5 } %>
         <%= f.input :disc_percent, :input_html => { :size => 5 } %>
     <% end %>
-    <% f.inputs "Warranty Information"  do %>
-        <%= f.input :warranty_info, :as => :text, :input_html => {  :rows => 15 }  %>
-        <%= f.input :warranty_length,  :input_html => { :size => 20 } %>
-        <%= f.input :warranty_unit, :as => :select, :collection => ["Day(s)", "Month(s)", "Year(s)"] %>
-    <% end %>
+        <% end %>
+        <% tab.create('tab_four', 'Warranty Information') do %>
+            <% f.inputs  do %>
+                   <%= f.input :warranty_info, :as => :text, :input_html => {  :rows => 15 }  %>
+                   <%= f.input :warranty_length,  :input_html => { :size => 20 } %>
+                   <%= f.input :warranty_unit, :as => :select, :collection => ["Day(s)", "Month(s)", "Year(s)"] %>
+               <% end %>
 
 
-  <%= f.buttons %>
+        <% end %>
+
+<% end %><br>
+
+      <%= f.buttons %>
+
+
 <% end %>
