--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
   </tr>
 
 <% @user.each do |user| %>
-  <tr align="center">
+  <tr align="center" class="<%= cycle :odd, :even %>">
     <td><%=h user.id %></td>
     <td><%=h user.name %></td>
     <td><%=h user.username %></td>
