--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -4,15 +4,15 @@
   <tr>
   </tr>
 
-<% @settings.each do |settings| %>
+<% @settings.each do |setting| %>
   <tr>
-    <td><%= link_to 'Show', settings %></td>
-    <td><%= link_to 'Edit', edit_settings_path(settings) %></td>
-    <td><%= link_to 'Destroy', settings, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Show', setting %></td>
+    <td><%= link_to 'Edit', edit_setting_path(setting) %></td>
+    <td><%= link_to 'Destroy', setting, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New settings', new_settings_path %>
+<%= link_to 'New settings', new_setting_path %>
