--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
         <% if logged_in? %>
          <%= link_to ( t "global.dashboard"), root_url %> |
         <% if permitted_to? :show, Supplier.new %>
+          <% if permitted_to? :edit, Setting.new %>
+          <%= link_to ( t "settings.t_title"), settings_path %> |
+              <% end %>
          <%= link_to ( t "user.t_title"), users_path %> |
          <%= link_to ( t "supplier.t_title"), suppliers_path %> |
          <%= link_to ( t "products.t_title"), products_path %> |
