--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_settings_path(@settings) %> |
-<%= link_to 'Back', settings_path %>
+<%= link_to 'Edit', edit_setting_path(@setting) %> |
+<%= link_to 'Back', setting_path %>
