--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,64 +1,73 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title> <%= t "global.program_name" %> | <%= @title %></title>
-  
-  <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base"  %>
+  <title> <%= t "global.program_name" %> | <%= @title %></title>
+
+  <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base" %>
   <%= javascript_include_tag 'jquery-1.4.2.min.js', 'jquery-ui-1.8.2.custom.min.js' %>
-   <script type="text/javascript">
-			$(function(){
-// Tabs
-				$('#tabs').tabs();
-});
-            </script>
+  <script type="text/javascript">
+      $(function() {
+          // Tabs
+          $('#tabs').tabs();
+      });
+  </script>
+  <!--[if lte IE 7]>
+  <style type="text/css">
+  html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
+  </style>
+  <![endif]-->
+  
 </head>
 <body>
 <div id="header">
-   <%= image_tag 'logo.png', :height => 60 %>
+  <%= image_tag 'logo.png', :height => 60 %>
+</div>
+
+<div id="user_nav" class="jqueryslidemenu">
+  <ul>
+    <% if logged_in? %>
+        <li><%= link_to (t "global.dashboard"), root_url %></li>
+        <li>
+          <% if permitted_to? :show, Supplier.new %></li>
+              <li>
+                <% if permitted_to? :edit, Setting.new %></li>
+                    <li><%= link_to (t "settings.t_title"), settings_path %></li>
+                <% end %>
+                <li><%= link_to (t "user.t_title"), users_path %></li>
+                <li><%= link_to (t "supplier.t_title"), suppliers_path %></li>
+                <li><%= link_to (t "products.t_title"), products_path %></li>
+          <% end %>
+          <% if permitted_to? :edit_profile, User.new %>
+              <li><%= link_to ( t "global.my_details"), profile_url(:id => current_user) %></li>
+              <% end %>
+          <li><%= link_to (t "global.logout"), logout_path %></li>
+    <% else %>
+        <li><%= link_to (t "global.home"), root_url %></li>
+        <li><%= link_to (t "global.register"), signup_path %></li>
+        <li><%= link_to (t "global.login"), login_path %></li>
+    <% end %>
+  </ul>
+
+
 </div>
 <div id="container" class="round">
-<div id="user_nav" class="round">
-        <% if logged_in? %>
-         <%= link_to ( t "global.dashboard"), root_url %> |
-        <% if permitted_to? :show, Supplier.new %>
-          <% if permitted_to? :edit, Setting.new %>
-          <%= link_to ( t "settings.t_title"), settings_path %> |
-              <% end %>
-         <%= link_to ( t "user.t_title"), users_path %> |
-         <%= link_to ( t "supplier.t_title"), suppliers_path %> |
-         <%= link_to ( t "products.t_title"), products_path %> |
-            <% end %>
-         <%= t "global.welcome" %> <% if permitted_to? :edit_profile, User.new %>
-        <%= link_to current_user.username, profile_url(:id => current_user)%>! Not you?
-          <% else %>
-      <%=h current_user.username %>! Not you?
-        <% end %>
-         <%= link_to (t "global.logout"), logout_path %>
-    <% else %>
-         <%= link_to ( t "global.home"), root_url %> |
-         <%= link_to ( t "global.register"), signup_path %> |
-         <%= link_to ( t "global.login"), login_path %>
-    <% end %>
-
-</div>
-
   <!--<div id="right_bar">
   </div>-->
-    <div id="yield">
-      <p>
-    <%- flash.each do |name, msg| -%>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+  <div id="yield">
+    <p>
+      <%- flash.each do |name, msg| -%>
+          <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <%- end -%>
-  </p>
-     <%= yield %>
-    </div>  
-
+    </p>
+    <%= yield %>
   </div>
-<div id="footer" class="round"  >
-<p>
-  Powered by MyIT CRM&copy; 2010. v2.0.0.0
-</p>
+
+</div>
+<div id="footer" class="round">
+  <p>
+    Powered by MyIT CRM&copy; 2010. v2.0.0.0
+  </p>
 </div>
 </body>
 </html>
