--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,21 +11,21 @@
  <p>
   <%= will_paginate @user, :class => "digg_pagination" %>
 </p>
-<table border="1" cellpadding="1" cellspacing="0" >
+<table id="index_table" >
   <tr>
-    <th width="100"><%= t "user.number" %></th>
-    <th width="100"><%= t "user.name" %></th>
-    <th width="100"><%= t "user.username" %></th>
-    <th width="100"><%= t "global.email" %></th>
-    <th width="100"><%= t "global.role" %></th>
-    <th width="100"><%= t "global.phone" %></th>
-    <th width="100"><%= t "global.mobile" %></th>
-    <th width="100"><%= t "global.active" %></th>
-    <th width="100"><%= t "supplier.actions" %></th>
+    <th ><%= t "user.number" %></th>
+    <th ><%= t "user.name" %></th>
+    <th ><%= t "user.username" %></th>
+    <th ><%= t "global.email" %></th>
+    <th ><%= t "global.role" %></th>
+    <th ><%= t "global.phone" %></th>
+    <th ><%= t "global.mobile" %></th>
+    <th ><%= t "global.active" %></th>
+    <th ><%= t "supplier.actions" %></th>
   </tr>
 
 <% @user.each do |user| %>
-  <tr align="center" class="<%= cycle :odd, :even %>">
+  <tr class="<%= cycle :odd, :even %>">
     <td><%=h user.id %></td>
     <td><%=h user.name %></td>
     <td><%=h user.username %></td>
