--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,16 @@
 <h1><%= t "user.t_new_user" %></h1>
+<!--mytodo fix form to formtastic format-->
 
-
-<% form_for(@user) do |f| %>
+<% semantic_form_for(@user) do |f| %>
   <%= f.error_messages %>
+    <%= f.inputs :username , :label => [t "user.username"] %>
+    <%= f.inputs :name , :label =>[t "user.name_eg"] %>
 
-  <p>
-    <%= f.label t "user.username" %><br />
-    <%= f.text_field :username %>
-  </p>
-  <p>
-    <%= f.label t "user.name_eg" %><br />
-    <%= f.text_field :name %>
-  </p>
+   <%= f.inputs :password %>
+   <%= f.inputs :password_confirmation, :label => [t "user.password_confirmation"] %>
+   <%= f.buttons %>
+
+  
   <p>
     <%= f.label t "global.email" %><br />
     <%= f.text_field :email %>
