--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -4,9 +4,22 @@ body {
   font-family: Verdana, Helvetica, Arial,serif;
   font-size: 12px;
 }
-th {
-    color: #ffffff;
-    background-color: #9999ff;
+#index_table {
+     border-collapse:collapse;
+}
+#index_table th, #index_table td {
+    border: 1px solid #000066;
+    padding:3px 7px 2px 7px;
+
+}
+#index_table th {
+  color: #ffffff;
+  background-color: #9999ff;
+    
+}
+#index_table td {
+  color: #000000;
+
 }
 
 a img {
@@ -25,18 +38,16 @@ a {
 
 #container {
   width: 97%;
-  float: left;  
-  margin: 0 auto;
+  float:left;
   background-color: #FFF;
-  padding: 20px 40px;
+  padding: 20px 40px 20px 40px;
   border: solid 1px black;
+  text-align:left;
   
 }
 #yield {
   margin: 0 auto;
   background-color: #FFF;
-  /*padding: 10px 20px;*/
-  /*margin-top: 10px;*/
 
 }
 h6 {
@@ -47,6 +58,7 @@ h6 {
 }
 #menu {
   width: 100%;
+    float:left; 
   margin: 0 auto;
   background-color: #FFF;
   padding: 20px 40px;
@@ -54,7 +66,7 @@ h6 {
   
 }
 #flash_notice, #flash_error {
-  padding: 4px 4px 4px 30px;
+  padding: 4px 30px 4px 30px;
   margin: 10px 0;
 }
 
@@ -108,16 +120,8 @@ h6 {
 }
 
 #user_nav {
-    width:100%;
-    padding-left:5px;
-    padding-bottom:3px;
-    padding-top:3px;
-    border:solid 2px #999999;
-    background-color: #cccccc;
-    text-align: left;
-    font-size:14px;
-    font-weight:bold;
-
+    height:100%;
+    margin: 0 auto;
 }
 #right_bar {
     width:15%;
@@ -136,16 +140,16 @@ h6 {
 }
 
 #footer {
-    width: 100%;
-    text-align:center;
-    font-size: 10px;
-    font-weight: bolder;
-    color: #66ff00;
-    text-shadow:black;
+    width:100%;
+    float:left; 
+    color: #FFF;
+    text-align: center;
+    padding: 4px 0;
 }
+    
 #header {
-    width: 100%;
     text-align:center;
+    padding-bottom:25px;
 
 }
 .even td {
@@ -173,6 +177,7 @@ h6 {
 
 
 }
+
 .digg_pagination {
   background: white;
   /* self-clearing method: */ }
@@ -1357,3 +1362,95 @@ h6 {
     border: 1px dotted black
 }
 
+/*BOF Slide Menu*/
+.jqueryslidemenu{
+font: bold 12px Verdana;
+background: #414141;
+width: 100%;
+}
+
+.jqueryslidemenu ul{
+margin: 0;
+padding: 0;
+list-style-type: none;
+}
+
+/*Top level list items*/
+.jqueryslidemenu ul li{
+position: relative;
+display: inline;
+float: left;
+}
+
+/*Top level menu link items style*/
+.jqueryslidemenu ul li a{
+display: block;
+background: #414141; /*background of tabs (default state)*/
+color: white;
+padding: 8px 10px;
+border-right: 1px solid #778;
+color: #2d2b2b;
+text-decoration: none;
+}
+
+* html .jqueryslidemenu ul li a{ /*IE6 hack to get sub menu links to behave correctly*/
+display: inline-block;
+}
+
+.jqueryslidemenu ul li a:link, .jqueryslidemenu ul li a:visited{
+color: white;
+}
+
+.jqueryslidemenu ul li a:hover{
+background: black; /*tab link background during hover state*/
+color: white;
+}
+
+/*1st sub level menu*/
+.jqueryslidemenu ul li ul{
+position: absolute;
+left: 0;
+display: block;
+visibility: hidden;
+}
+
+/*Sub level menu list items (undo style from Top level List Items)*/
+.jqueryslidemenu ul li ul li{
+display: list-item;
+float: none;
+}
+
+/*All subsequent sub menu levels vertical offset after 1st level sub menu */
+.jqueryslidemenu ul li ul li ul{
+top: 0;
+}
+
+/* Sub level menu links style */
+.jqueryslidemenu ul li ul li a{
+font: normal 13px Verdana;
+width: 160px; /*width of sub menus*/
+padding: 5px;
+margin: 0;
+border-top-width: 0;
+border-bottom: 1px solid gray;
+}
+
+.jqueryslidemenuz ul li ul li a:hover{ /*sub menus hover style*/
+background: #eff9ff;
+color: black;
+}
+
+/* ######### CSS classes applied to down and right arrow images  ######### */
+
+.downarrowclass{
+position: absolute;
+top: 12px;
+right: 7px;
+}
+
+.rightarrowclass{
+position: absolute;
+top: 6px;
+right: 5px;
+}
+/*EOF Slide Menu*/
